# OrderService

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  compose.yaml  pyproject.toml
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json
.github/workflows/: docker-image-build.yml
scripts/: dev.sh  prod.sh  start-consumer.sh  start-worker.sh
src/alembic/: env.py
src/alembic/versions/: 69e23a157c0b_add_orders_table.py  c99c45f5e094_add_users_table.py
src/order_consumer/: __main__.py  schemas.py  settings.py
src/order_consumer/routers/: order.py
src/order_service/: __main__.py  app.py  settings.py
src/order_service/dependencies/: auth.py  common.py  order.py
src/order_service/dto/: auth.py  base.py  order.py  user.py
src/order_service/enums/: order.py
src/order_service/errors/: auth.py  common.py
src/order_service/helpers/: auth.py
src/order_service/models/: __init__.py  base.py  order.py  user.py
src/order_service/repos/: base.py  order.py  user.py
src/order_service/routers/: auth.py  order.py
src/order_service/schemas/: auth.py  base.py  order.py
src/order_service/services/: auth.py  order.py
src/order_worker/: settings.py  taskiq_app.py  tasks.py
