[project]
name = "order_service"
version = "0.1.0"
description = "Test task from FunTech"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "black>=25.12.0",
    "email-validator>=2.3.0",
    "fastapi>=0.125.0",
    "faststream[kafka]>=0.6.4",
    "greenlet>=3.3.0",
    "pre-commit>=4.5.1",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.21",
    "python-ulid>=3.1.0",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.45",
    "typer>=0.20.0",
    "types-redis>=4.6.0.20241004",
    "ulid>=1.1",
    "uvicorn>=0.38.0",
]
